# LightPet

./: .gitignore  AGENTS.md  Makefile  README.md  app.js  index.html  styles.css
Assets/: AppIcon.icns
Sources/LightPetDesktop/: main.swift
Sources/LightPetDesktop/Core/: PetRuntime.swift
Sources/LightPetDesktop/UI/: PetAnimationView.swift
docs/: codex-pet-implementation.md  pet-authoring-prompts.md
docs/hatch-pet-run-example/: README.md  imagegen-jobs.example.json
docs/hatch-pet-run-example/final/: README.md
docs/hatch-pet-run-example/qa/: README.md
preview/web/: app.js  index.html
products/: AGENTS.md
products/lightpet_macos/: .gitignore  AGENTS.md  Makefile  Package.swift  README.md
products/lightpet_macos/preview/web/: app.js  (+1 more)
products/lightpet_pyside6/: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
products/lightpet_pyside6/docs/: pet-animation-contract.json
products/lightpet_pyside6/scripts/: validate_animation_contract.py
products/lightpet_pyside6/src/lightpet_pyside6/: __init__.py  cli.py  package_loader.py  pet_window.py
products/lightpet_pyside6/tests/: test_contract.py  test_package_loader.py
products/lightpet_qt/: AGENTS.md  Makefile  README.md  pyproject.toml
products/lightpet_qt/scripts/: validate_animation_contract.py
products/lightpet_qt/src/lightpet_qt/: __init__.py  cli.py  contract.py  package_loader.py  pet_window.py
products/lightpet_qt/tests/: test_contract.py  test_package_loader.py
products/lightpet_runtime/: AGENTS.md  Makefile  README.md
sample-pets/conan/: pet.json
scripts/: package_app.sh
(+26 files in other folders)
