[project]
name = "lightpet-qt"
version = "0.1.0"
description = "PySide6/Qt desktop runtime for Codex-compatible LightPet packages."
requires-python = ">=3.12,<3.13"
dependencies = [
  "PySide6>=6.8,<7",
]

[project.scripts]
lightpet-qt = "lightpet_qt.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
